# constexpr_monte_carlo_pi

./: CMakeLists.txt  README.md  monte_carlo_pi.cc  monte_carlo_pi.hpp
